--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/server"
   },
   "dependencies": {
+    "babel": "^4.7.3",
     "babelify": "^5.0.4",
     "body-parser": "~1.12.0",
     "bookshelf": "^0.7.9",
     "browserify": "^9.0.3",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
+    "ejs": "^2.3.1",
     "express": "~4.12.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
-    "gulp-embedlr": "^0.5.2",
     "gulp-jshint": "^1.9.2",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.0",
@@ -24,6 +24,7 @@
     "jade": "~1.9.2",
     "knex": "^0.7.4",
     "less-middleware": "1.0.x",
+    "lodash": "^3.4.0",
     "morgan": "~1.5.1",
     "react": "^0.12.2",
     "react-router": "^0.12.4",
