--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bookshelf": "^0.7.9",
     "browserify": "^9.0.3",
     "cookie-parser": "~1.3.4",
+    "cookies": "^0.5.0",
     "debug": "~2.1.1",
     "ejs": "^2.3.1",
     "express": "~4.12.0",
@@ -30,6 +31,8 @@
     "react-router": "^0.12.4",
     "reactify": "^1.0.0",
     "serve-favicon": "~2.2.0",
-    "vinyl-source-stream": "^1.1.0"
+    "uuid": "^2.0.1",
+    "vinyl-source-stream": "^1.1.0",
+    "when": "^3.7.2"
   }
 }
