--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "uuid": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "when": "^3.7.2",
-    "gulp-sourcemaps": "~1.5.0"
+    "when": "^3.7.2"
   },
   "devDependencies": {
     "gulp-uglify": "^1.1.0"
