--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-nodemon": "^1.0.5",
+    "gulp-sourcemaps": "^1.5.1",
     "jade": "~1.9.2",
     "knex": "^0.7.4",
     "less-middleware": "1.0.x",
