--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.1.1",
     "ejs": "^2.3.1",
     "express": "~4.12.0",
+    "flux": "^2.0.1",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.9.2",
     "gulp-less": "^3.0.1",
@@ -30,11 +31,13 @@
     "less-middleware": "1.0.x",
     "lodash": "^3.4.0",
     "morgan": "~1.5.1",
+    "object-assign": "^2.0.0",
     "pg": "^4.3.0",
     "react": "^0.12.2",
     "react-router": "^0.12.4",
     "reactify": "^1.0.0",
     "serve-favicon": "~2.2.0",
+    "superagent": "^1.1.0",
     "uuid": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
