--- a/package.json
+++ b/package.json
@@ -9,41 +9,40 @@
   },
   "dependencies": {
     "babel": "^4.7.3",
-    "babelify": "^5.0.4",
     "body-parser": "~1.12.0",
     "bookshelf": "^0.7.9",
-    "browserify": "^9.0.3",
     "cookie-parser": "~1.3.4",
     "cookies": "^0.5.0",
-    "debug": "~2.1.1",
-    "ejs": "^2.3.1",
+    "debug": "^2.1.3",
     "express": "~4.12.0",
     "flux": "^2.0.1",
-    "gulp-concat": "^2.5.2",
+    "jade": "~1.9.2",
+    "knex": "^0.7.4",
+    "less-middleware": "^2.0.1",
+    "lodash": "^3.4.0",
+    "morgan": "^1.5.2",
+    "object-assign": "^2.0.0",
+    "pg": "^4.3.0",
+    "react": "^0.13",
+    "react-router": "^0.13",
+    "serve-favicon": "~2.2.0",
+    "superagent": "^1.1.0",
+    "uuid": "^2.0.1",
+    "when": "^3.7.2"
+  },
+  "devDependencies": {
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.3",
+    "gulp": "^3.8.11",
     "gulp-jshint": "^1.9.2",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-nodemon": "^1.0.5",
     "gulp-sourcemaps": "^1.5.1",
-    "jade": "~1.9.2",
-    "knex": "^0.7.4",
-    "less-middleware": "1.0.x",
-    "lodash": "^3.4.0",
-    "morgan": "~1.5.1",
-    "object-assign": "^2.0.0",
-    "pg": "^4.3.0",
-    "react": "^0.13",
-    "react-router": "^0.13",
+    "gulp-uglify": "^1.1.0",
     "reactify": "^1.0.0",
-    "serve-favicon": "~2.2.0",
-    "superagent": "^1.1.0",
-    "uuid": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "when": "^3.7.2"
-  },
-  "devDependencies": {
-    "gulp-uglify": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
