--- a/package.json
+++ b/package.json
@@ -33,14 +33,19 @@
   "devDependencies": {
     "babelify": "^5.0.4",
     "browserify": "^9.0.3",
+    "chai": "^2.2.0",
     "gulp": "^3.8.11",
-    "gulp-jshint": "^1.9.2",
+    "gulp-eslint": "^0.7.0",
+    "gulp-istanbul": "^0.7.0",
+    "gulp-jsx-coverage": "^0.1.1",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
+    "gulp-mocha": "^2.0.0",
     "gulp-nodemon": "^1.0.5",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "mocha": "^2.2.1",
     "reactify": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
