--- a/.eslintrc
+++ b/.eslintrc
@@ -120,7 +120,7 @@
     "no-caller": [2],
     "no-catch-shadow": [2],
     "no-cond-assign": [2],
-    //"no-console": [2],
+    "no-console": [2],
     "no-constant-condition": [1],
     "no-control-regex": [2],
     "no-debugger": [2],
