--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "bcrypt-nodejs": "0.0.3",
     "passport-local": "~1.0.0",
     "express-session": "~1.10.4",
-    "connect-flash": "~0.1.1"
+    "connect-flash": "~0.1.1",
+    "keymirror": "~0.1.1"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
