Created solution to implement server and client side data fetching without need for extra plugins. depends on api filenaming convention. Currently passing req around, should be refactored.
Modified caching and rehydrating.

Created logging out route.

Modified isomorphism so that creation and deletion redirects.

Added methodoverride and possibility to add missing http methods for form submits/links.

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "bcrypt-nodejs": "0.0.3",
     "passport-local": "~1.0.0",
     "express-session": "~1.10.4",
-    "connect-flash": "~0.1.1",
-    "keymirror": "~0.1.1"
+    "keymirror": "~0.1.1",
+    "method-override": "~2.3.2"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
