--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,6 @@
     "objectLiteralShorthandProperties": true,
     "octalLiterals": true,
     "regexYFlag": true,
-    "regexYFlag": true,
     "restParams": true,
     "spread": true,
     "superInFunctions": true,
@@ -32,18 +31,20 @@
     "unicodeCodePointEscapes": true
   },
   "rules": {
-    "block-scoped-var": [0],
+    "block-scoped-var": 0,
     "brace-style": [
       2,
       "1tbs",
-      {"allowSingleLine": true}
+      {
+        "allowSingleLine": true
+      }
     ],
-    "camelcase": [0],
+    "camelcase": 0,
     "comma-dangle": [
       2,
       "never"
     ],
-    "comma-spacing": [2],
+    "comma-spacing": 2,
     "comma-style": [
       2,
       "last"
@@ -52,37 +53,38 @@
       0,
       11
     ],
-    "consistent-return": [2],
+    "consistent-return": 2,
     "consistent-this": [
       0,
-      "that"
+      "self"
     ],
     "curly": [
       2,
       "all"
     ],
-    "default-case": [2],
+    "default-case": 2,
     "dot-notation": [
       2,
-      {"allowKeywords": false}
+      {
+        "allowKeywords": true
+      }
     ],
-    "eol-last": [2],
-    "eqeqeq": [2],
-    "func-names": [0],
+    "eol-last": 2,
+    "eqeqeq": 2,
+    "func-names": 0,
     "func-style": [
-      0,
+      2,
       "declaration"
     ],
-    "generator-star-spacing": [
-      2,
-      "after"
-    ],
-    "guard-for-in": [0],
-    "handle-callback-err": [0],
+    "generator-star-spacing": 0,
+    "guard-for-in": 0,
+    "handle-callback-err": 2,
     "indent": [
       2,
       2,
-      {"indentSwitchCase": true}
+      {
+        "indentSwitchCase": true
+      }
     ],
     "key-spacing": [
       2,
@@ -92,17 +94,17 @@
       }
     ],
     "max-depth": [
-      0,
+      1,
       4
     ],
     "max-len": [
-      0,
-      80,
+      1,
+      100,
       4
     ],
     "max-nested-callbacks": [
-      0,
-      2
+      1,
+      3
     ],
     "max-params": [
       0,
@@ -112,53 +114,56 @@
       0,
       10
     ],
-    "new-parens": [2],
-    "new-cap": [0],
-    "no-alert": [2],
-    "no-array-constructor": [2],
-    "no-bitwise": [0],
-    "no-caller": [2],
-    "no-catch-shadow": [2],
-    "no-cond-assign": [2],
-    "no-console": [2],
-    "no-constant-condition": [1],
-    "no-control-regex": [2],
-    "no-debugger": [2],
-    "no-delete-var": [2],
-    "no-div-regex": [0],
-    "no-dupe-args": [2],
-    "no-dupe-keys": [2],
-    "no-duplicate-case": [2],
-    "no-else-return": [0],
-    "no-empty": [2],
-    "no-empty-class": [2],
-    "no-empty-label": [2],
-    "no-eq-null": [0],
-    "no-eval": [2],
-    "no-ex-assign": [2],
-    "no-extend-native": [0],
-    "no-extra-bind": [2],
-    "no-extra-boolean-cast": [2],
-    "no-extra-parens": [0],
-    "no-extra-semi": [1],
-    "no-extra-strict": [2],
-    "no-fallthrough": [2],
-    "no-floating-decimal": [2],
-    "no-func-assign": [2],
-    "no-implied-eval": [2],
-    "no-inline-comments": [0],
+    "new-cap": 0,
+    "new-parens": 2,
+    "no-alert": 2,
+    "no-array-constructor": 2,
+    "no-bitwise": 0,
+    "no-caller": 2,
+    "no-catch-shadow": 2,
+    "no-cond-assign": [
+      2,
+      "always"
+    ],
+    "no-console": 2,
+    "no-constant-condition": 1,
+    "no-control-regex": 2,
+    "no-debugger": 2,
+    "no-delete-var": 2,
+    "no-div-regex": 0,
+    "no-dupe-args": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-else-return": 2,
+    "no-empty": 2,
+    "no-empty-class": 2,
+    "no-empty-label": 2,
+    "no-eq-null": 2,
+    "no-eval": 2,
+    "no-ex-assign": 2,
+    "no-extend-native": 2,
+    "no-extra-bind": 2,
+    "no-extra-boolean-cast": 2,
+    "no-extra-parens": 0,
+    "no-extra-semi": 2,
+    "no-extra-strict": 2,
+    "no-fallthrough": 2,
+    "no-floating-decimal": 2,
+    "no-func-assign": 2,
+    "no-implied-eval": 2,
+    "no-inline-comments": 0,
     "no-inner-declarations": [
       2,
       "functions"
     ],
-    "no-invalid-regexp": [2],
-    "no-irregular-whitespace": [2],
-    "no-iterator": [2],
-    "no-label-var": [2],
-    "no-labels": [2],
-    "no-lone-blocks": [2],
-    "no-lonely-if": [2],
-    "no-loop-func": [2],
+    "no-invalid-regexp": 2,
+    "no-irregular-whitespace": 2,
+    "no-iterator": 2,
+    "no-label-var": 2,
+    "no-labels": 2,
+    "no-lone-blocks": 2,
+    "no-lonely-if": 2,
+    "no-loop-func": 2,
     "no-mixed-requires": [
       0,
       false
@@ -167,51 +172,53 @@
       2,
       false
     ],
-    "no-multi-spaces": [2],
-    "no-multi-str": [2],
+    "no-multi-spaces": 2,
+    "no-multi-str": 2,
     "no-multiple-empty-lines": [
       2,
-      {"max": 1}
+      {
+        "max": 1
+      }
     ],
-    "no-native-reassign": [0],
-    "no-negated-in-lhs": [2],
-    "no-nested-ternary": [0],
-    "no-new": [2],
-    "no-new-func": [2],
-    "no-new-object": [2],
-    "no-new-require": [0],
-    "no-new-wrappers": [2],
-    "no-obj-calls": [2],
-    "no-octal": [2],
-    "no-octal-escape": [2],
-    "no-path-concat": [0],
-    "no-plusplus": [0],
-    "no-process-env": [0],
-    "no-process-exit": [2],
-    "no-proto": [2],
-    "no-redeclare": [2],
-    "no-regex-spaces": [2],
-    "no-reserved-keys": [2],
-    "no-restricted-modules": [0],
-    "no-return-assign": [2],
-    "no-script-url": [2],
-    "no-self-compare": [0],
-    "no-sequences": [2],
-    "no-shadow": [2],
-    "no-shadow-restricted-names": [2],
-    "no-space-before-semi": [2],
-    "no-spaced-func": [2],
-    "no-sparse-arrays": [2],
-    "no-sync": [0],
-    "no-ternary": [0],
-    "no-throw-literal": [2],
-    "no-trailing-spaces": [2],
-    "no-undef": [2],
-    "no-undef-init": [2],
-    "no-undefined": [0],
-    "no-underscore-dangle": [0],
-    "no-unreachable": [2],
-    "no-unused-expressions": [2],
+    "no-native-reassign": 2,
+    "no-negated-in-lhs": 2,
+    "no-nested-ternary": 1,
+    "no-new": 2,
+    "no-new-func": 2,
+    "no-new-object": 2,
+    "no-new-require": 0,
+    "no-new-wrappers": 2,
+    "no-obj-calls": 2,
+    "no-octal": 2,
+    "no-octal-escape": 2,
+    "no-path-concat": 0,
+    "no-plusplus": 0,
+    "no-process-env": 0,
+    "no-process-exit": 2,
+    "no-proto": 2,
+    "no-redeclare": 2,
+    "no-regex-spaces": 2,
+    "no-reserved-keys": 0,
+    "no-restricted-modules": 0,
+    "no-return-assign": 2,
+    "no-script-url": 2,
+    "no-self-compare": 2,
+    "no-sequences": 2,
+    "no-shadow": 2,
+    "no-shadow-restricted-names": 2,
+    "no-space-before-semi": 2,
+    "no-spaced-func": 2,
+    "no-sparse-arrays": 2,
+    "no-sync": 0,
+    "no-ternary": 0,
+    "no-throw-literal": 2,
+    "no-trailing-spaces": 2,
+    "no-undef": 2,
+    "no-undef-init": 2,
+    "no-undefined": 0,
+    "no-underscore-dangle": 0,
+    "no-unreachable": 2,
+    "no-unused-expressions": 2,
     "no-unused-vars": [
       1,
       {
@@ -219,8 +226,9 @@
         "args": "after-used"
       }
     ],
-    "no-use-before-define": [2],
-    "no-void": [0],
+    "no-use-before-define": 2,
+    "no-var" : 2,
+    "no-void": 0,
     "no-warning-comments": [
       0,
       {
@@ -232,22 +240,34 @@
         "location": "start"
       }
     ],
-    "no-with": [2],
-    "no-wrap-func": [2],
-    "one-var": [0],
+    "no-with": 2,
+    "no-wrap-func": 2,
+    "one-var": 0,
     "operator-assignment": [
       0,
       "always"
     ],
-    "padded-blocks": [0],
+    "padded-blocks": 0,
+    "quote-props": 0,
     "quotes": [
       2,
       "single",
       "avoid-escape"
     ],
-    "quote-props": [0],
-    "radix": [0],
-    "semi": [2],
+    "radix": 0,
+    "react/display-name": 1,
+    "react/jsx-no-undef": 1,
+    "react/jsx-quotes": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 1,
+    "react/prop-types": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1,
+    "semi": 2,
     "semi-spacing": [
       2,
       {
@@ -255,9 +275,13 @@
         "after": true
       }
     ],
-    "sort-vars": [0],
+    "sort-vars": 0,
     "space-after-keywords": [
       2,
+      "always"
+    ],
+    "space-before-blocks": [
+      0,
       "always"
     ],
     "space-before-function-parentheses": [
@@ -266,10 +290,6 @@
         "anonymous": "always",
         "named": "never"
       }
-    ],
-    "space-before-blocks": [
-      0,
-      "always"
     ],
     "space-in-brackets": [
       0,
@@ -287,8 +307,8 @@
       2,
       "never"
     ],
-    "space-infix-ops": [2],
-    "space-return-throw-case": [2],
+    "space-infix-ops": 2,
+    "space-return-throw-case": 2,
     "space-unary-ops": [
       2,
       {
@@ -300,30 +320,20 @@
       0,
       "always"
     ],
-    "strict": [2],
-    "use-isnan": [2],
-    "valid-jsdoc": [0],
-    "valid-typeof": [2],
-    "vars-on-top": [0],
-    "wrap-iife": [2],
-    "wrap-regex": [2],
+    "strict": 2,
+    "use-isnan": 2,
+    "valid-jsdoc": 0,
+    "valid-typeof": 2,
+    "vars-on-top": 0,
+    "wrap-iife": 2,
+    "wrap-regex": 2,
     "yoda": [
       2,
       "never",
-      {"exceptRange": true}
-    ],
-    "react/display-name": 1,
-    "react/jsx-quotes": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
-    "react/no-multi-comp": 1,
-    "react/prop-types": 1,
-    "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1
+      {
+        "exceptRange": true
+      }
+    ]
   },
   "plugins": [
     "react"
