--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "start": "gulp dev"
   },
   "dependencies": {
-    "babel": "^4.7.3",
+    "babel": "~5.0.12",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
     "bookshelf": "^0.7.9",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.4",
     "cookies": "^0.5.0",
     "debug": "^2.1.3",
     "express": "~4.12.0",
+    "express-flash": "0.0.2",
+    "express-session": "~1.10.4",
     "flux": "^2.0.1",
     "jade": "~1.9.2",
+    "keymirror": "~0.1.1",
     "knex": "^0.7.4",
     "less-middleware": "^2.0.1",
     "lodash": "^3.4.0",
+    "method-override": "~2.3.2",
     "morgan": "^1.5.2",
     "object-assign": "^2.0.0",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
     "pg": "^4.3.0",
     "react": "^0.13",
     "react-router": "^0.13",
     "serve-favicon": "~2.2.0",
     "superagent": "^1.1.0",
-    "uuid": "^2.0.1",
-    "when": "^3.7.2",
-    "passport": "~0.2.1",
-    "bcrypt-nodejs": "0.0.3",
-    "passport-local": "~1.0.0",
-    "express-session": "~1.10.4",
-    "keymirror": "~0.1.1",
-    "method-override": "~2.3.2",
     "use-strict": "~1.0.0",
-    "express-flash": "0.0.2",
-    "connect-flash": "~0.1.1"
+    "uuid": "^2.0.1",
+    "when": "^3.7.2"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
@@ -50,6 +50,7 @@
     "gulp-jsx-coverage": "^0.1.1",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "~0.9.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-mocha": "^2.0.0",
     "gulp-nodemon": "^1.0.5",
@@ -58,7 +59,6 @@
     "mocha": "^2.2.1",
     "reactify": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "gulp-load-plugins": "~0.9.0"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
