--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "superagent": "^1.1.0",
     "use-strict": "~1.0.0",
     "uuid": "^2.0.1",
-    "when": "^3.7.2"
+    "when": "^3.7.2",
+    "mongoose": "~4.0.1"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
