--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "uuid": "^2.0.1",
     "when": "^3.7.2",
     "mongoose": "~4.0.1",
-    "nohm": "~0.9.6"
+    "nohm": "~0.9.6",
+    "redis": "~0.12.1"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
