--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "rethinkdb": "~2.0.0",
     "thinky": "~2.0.2",
     "helmet": "~0.8.0",
-    "radium": "~0.10.2",
     "color": "~0.8.0"
   },
   "devDependencies": {
@@ -67,6 +66,7 @@
     "mocha": "^2.2.1",
     "reactify": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "react-inline": "~0.6.0"
   }
 }
