Refactored repo loading. Added Winston to be logger.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "rethinkdb": "~2.0.0",
     "thinky": "~2.0.2",
     "helmet": "~0.8.0",
-    "color": "~0.8.0"
+    "color": "~0.8.0",
+    "winston": "~1.0.0"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
