Finished ThingActions test cases. Setup jsdom for JSX testing and started to implement tests for Thing component.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "vinyl-source-stream": "^1.1.0",
     "sinon": "~1.14.1",
     "mockery": "~1.4.0",
-    "proxyquire": "~1.4.0"
+    "proxyquire": "~1.4.0",
+    "jsdom": "~5.3.0",
+    "mocha-jsdom": "~0.3.0"
   }
 }
