Finished tests for Thing. Started adding Neo4J.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "thinky": "~2.0.2",
     "helmet": "~0.8.0",
     "color": "~0.8.0",
-    "winston": "~1.0.0"
+    "winston": "~1.0.0",
+    "node-neo4j": "~2.0.3"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
