--- a/package.json
+++ b/package.json
@@ -12,39 +12,40 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
     "bookshelf": "^0.7.9",
+    "color": "~0.8.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.4",
     "cookies": "^0.5.0",
+    "couchdb-seed-design": "0.0.5",
     "debug": "^2.1.3",
     "express": "~4.12.0",
     "express-flash": "0.0.2",
     "express-session": "~1.10.4",
     "flux": "^2.0.1",
+    "helmet": "~0.8.0",
     "jade": "~1.9.2",
     "keymirror": "~0.1.1",
     "knex": "^0.7.4",
     "less-middleware": "^2.0.1",
     "lodash": "^3.4.0",
     "method-override": "~2.3.2",
+    "mongoose": "~4.0.1",
     "morgan": "^1.5.2",
+    "nohm": "~0.9.6",
     "object-assign": "^2.0.0",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
     "pg": "^4.3.0",
     "react": "^0.13",
     "react-router": "^0.13.3",
+    "redis": "~0.12.1",
+    "rethinkdb": "~2.0.0",
     "serve-favicon": "~2.2.0",
     "superagent": "^1.1.0",
+    "thinky": "~2.0.2",
     "use-strict": "~1.0.0",
     "uuid": "^2.0.1",
     "when": "^3.7.2",
-    "mongoose": "~4.0.1",
-    "nohm": "~0.9.6",
-    "redis": "~0.12.1",
-    "rethinkdb": "~2.0.0",
-    "thinky": "~2.0.2",
-    "helmet": "~0.8.0",
-    "color": "~0.8.0",
     "winston": "~1.0.0"
   },
   "devDependencies": {
