--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.4",
     "cookies": "^0.5.0",
-    "couchdb-seed-design": "0.0.5",
+    "cradle": "^0.6.9",
     "debug": "^2.1.3",
     "express": "~4.12.0",
     "express-flash": "0.0.2",
