--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "gulp dev"
   },
   "dependencies": {
-    "babel": "~5.0.12",
+    "babel": "^5.4.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
-    "bookshelf": "^0.7.9",
+    "bookshelf": "^0.8.1",
     "color": "~0.8.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.4",
@@ -20,12 +20,12 @@
     "debug": "^2.1.3",
     "express": "~4.12.0",
     "express-flash": "0.0.2",
-    "express-session": "~1.10.4",
+    "express-session": "~1.11.2",
     "flux": "^2.0.1",
-    "helmet": "~0.8.0",
-    "jade": "~1.9.2",
+    "helmet": "~0.9.0",
+    "jade": "~1.10.0",
     "keymirror": "~0.1.1",
-    "knex": "^0.7.4",
+    "knex": "^0.8.6",
     "less-middleware": "^2.0.1",
     "lodash": "^3.4.0",
     "method-override": "~2.3.2",
@@ -55,6 +55,7 @@
     "eslint": "~0.18.0",
     "eslint-plugin-react": "^1.6.1",
     "gulp": "^3.8.11",
+    "gulp-coveralls": "^0.1.4",
     "gulp-eslint": "^0.7.0",
     "gulp-jsx-coverage": "^0.1.1",
     "gulp-livereload": "^3.8.0",
