--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "NERD-stack",
   "version": "0.0.1",
   "author": "Jussi Hallila",
-  "repository": "https://github.com/Spruceslope/nerd",
+  "repository": "https://github.com/Xantier/nerd-stack.git",
   "private": true,
   "scripts": {
     "start": "gulp dev"
