--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,5 +1,5 @@
 {
-  "db": "rethinkdb",
+  "db": "neo4j",
   "bookshelf": {
     "init": "data/bookshelf/init",
     "passport" : "data/bookshelf/passport",
@@ -79,5 +79,13 @@
     "host": "http://localhost",
     "port" : "5984",
     "db": "nerd_stack_dev"
+  },
+  "neo4j" : {
+    "init" : "data/neo4j/init",
+    "passport" : "data/neo4j/passport",
+    "server" : "http://localhost:7474",
+    "endpoint" : "",
+    "user" : "neo4j",
+    "password" : "neo4j"
   }
 }
