Made Registration, signin and user retrieval work with neo4j.

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -85,7 +85,7 @@
     "passport" : "data/neo4j/passport",
     "server" : "http://localhost:7474",
     "endpoint" : "",
-    "user" : "neo4j",
-    "password" : "neo4j"
+    "user" : "",
+    "password" : ""
   }
 }
