--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,13 @@
     "globalReturn": false,
     "jsx": true,
     "modules": true,
-    "objectLiteralComputedProperties"no-
+    "objectLiteralComputedProperties": true,
+    "objectLiteralDuplicateProperties": false,		
+    "objectLiteralShorthandMethods": true,		
+    "objectLiteralShorthandProperties": true,		
+    "octalLiterals": true,		
+    "regexYFlag": true,		
+    "restParams": true,
     "spread": true,
     "superInFunctions": true,
     "templateStrings": true,
