--- a/package.json
+++ b/package.json
@@ -67,14 +67,15 @@
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
-    "mocha": "^2.2.1",
-    "reactify": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "sinon": "~1.14.1",
-    "mockery": "~1.4.0",
-    "proxyquire": "~1.5.0",
     "jsdom": "~5.4.3",
-    "mocha-jsdom": "~0.4.0"
+    "mocha": "^2.2.1",
+    "mocha-jsdom": "~0.4.0",
+    "mockery": "~1.4.0",
+    "nock": "^2.3.0",
+    "proxyquire": "~1.5.0",
+    "reactify": "^1.0.0",
+    "sinon": "~1.14.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
