--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NERD-stack",
+  "name": "nerd-stack",
   "version": "0.0.1",
   "author": "Jussi Hallila",
   "repository": "https://github.com/Xantier/nerd-stack.git",
