--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "Jussi Hallila",
   "repository": "https://github.com/Xantier/nerd-stack.git",
+  "license": "MIT",
   "scripts": {
     "start": "gulp dev",
     "test": "gulp test"
@@ -32,7 +33,7 @@
     "mongoose": "~4.0.1",
     "morgan": "^1.5.2",
     "nohm": "~0.9.6",
-    "object-assign": "~2.1.1",
+    "object-assign": "~3.0.0",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
     "pg": "^4.3.0",
@@ -55,11 +56,11 @@
     "browserify": "^11.0.0",
     "chai": "^3.0.0",
     "eslint": "~0.24.0",
-    "eslint-plugin-react": "^2.4.0",
+    "eslint-plugin-react": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.4",
     "gulp-eslint": "^0.15.0",
-    "gulp-jsx-coverage": "^0.1.1",
+    "gulp-jsx-coverage": "^0.1.3",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-css": "^1.1.5",
