--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "method-override": "~2.3.2",
     "mongoose": "~4.1.0",
     "morgan": "^1.5.2",
+    "mysql": "^2.8.0",
     "nohm": "~0.9.6",
     "object-assign": "~3.0.0",
     "passport": "~0.2.1",
@@ -44,6 +45,7 @@
     "seraph": "^0.13.0",
     "seraph-model": "^0.7.2",
     "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.0.10",
     "superagent": "^1.1.0",
     "thinky": "~2.1.4",
     "use-strict": "~1.0.0",
