--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-css": "^1.1.5",
     "gulp-mocha": "^2.0.0",
-    "gulp-nodemon": "^2.0.3",
+    "gulp-nodemon": "2.0.4",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "jsdom": "~5.6.0",
